# OpenAnt

./: LICENSE  README.md
libs/openant-core/: CLAUDE.md  DESIGN.md  experiment.py  generate_report.py  pyproject.toml  requirements.txt
libs/openant-core/context/: application_context.py  generate_context.py
libs/openant-core/core/: analyzer.py  dynamic_tester.py  enhancer.py  git_diff.py  parallel.py  parser_adapter.py  progress.py  reporter.py  scanner.py  verifier.py
libs/openant-core/openant/: cli.py
libs/openant-core/parsers/c/: call_graph_builder.py
libs/openant-core/parsers/cicd/: __init__.py  parse_repository.py  security_model.py  workflow_parser.py  workflow_scanner.py
libs/openant-core/parsers/java/: PARSER_PIPELINE.md  call_graph_builder.py  function_extractor.py  repository_scanner.py  test_pipeline.py  unit_generator.py
libs/openant-core/parsers/javascript/: PARSER_PIPELINE.md  PARSER_UPGRADE_PLAN.md  typescript_analyzer.js  unit_generator.js
libs/openant-core/parsers/python/: parse_repository.py  repository_scanner.py
libs/openant-core/prompts/: cicd_analysis.py
libs/openant-core/report/: generator.py
libs/openant-core/utilities/: context_corrector.py  context_enhancer.py  context_reviewer.py  finding_verifier.py  ground_truth_challenger.py  json_corrector.py  llm_client.py  snowflake_auth.py  snowflake_client.py  stage1_consistency.py
libs/openant-core/utilities/agentic_enhancer/: agent.py  entry_point_detector.py
libs/openant-core/utilities/dynamic_tester/: DYNAMIC_TESTER_REFERENCE.md  __init__.py  test_generator.py
(+18 files in other folders)
