[project]
name = "openant"
version = "0.1.0"
description = "Two-stage SAST tool using Claude for vulnerability analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "PyYAML>=6.0",
    "requests>=2.31.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-c>=0.21.0",
    "tree-sitter-cpp>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "tree-sitter-ruby>=0.21.0",
    "tree-sitter-php>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
openant = "openant.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "openant",
    "core",
    "utilities",
    "parsers",
    "prompts",
    "context",
    "report",
]
